--- a/Chat_praject/css/components/screen-header.css
+++ b/Chat_praject/css/components/screen-header.css
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 40px 25px 25px;
+  padding: var(--horizontal-space);
+  padding-top: 40px;
+  margin-bottom: 15px;
 }
 
 .screen-header__title {
@@ -10,6 +12,10 @@
   font-weight: 600;
 }
 
+.screen-header__dot {
+  position: relative;
+}
+
 .screen-header__icons span {
-  margin-left: 25px;
+  margin-left: 15px;
 }
