--- a/Chat_praject/css/screens/login.css
+++ b/Chat_praject/css/screens/login.css
@@ -29,12 +29,12 @@
 }
 
 #login-form input:not([type="submit"]) {
-  border-bottom: 1px solid rgb(0, 0, 0, 0.2);
+  border-bottom: var(--main-border);
   transition: border-color 0.3s ease-in-out;
 }
 
 #login-form input::placeholder {
-  color: rgb(0, 0, 0, 0.4);
+  color: var(--main-color);
 }
 
 #login-form input:focus {
