--- a/Front_End_Project/Chat_App_Front_End/css/components/user-component.css
+++ b/Front_End_Project/Chat_App_Front_End/css/components/user-component.css
@@ -27,6 +27,18 @@
   color: rgba(0, 0, 0, 0.5);
 }
 
+.exclamation {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: red;
+  margin-left: 3px;
+  /* width: 20px;
+  height: 20px;
+  border-radius: 10px;
+  border: 1px solid red; */
+}
+
 .user-components__avatar--xl {
   width: 80px;
   height: 80px;
