--- a/Front_End_Project/Chat_App_Front_End/css/styles.css
+++ b/Front_End_Project/Chat_App_Front_End/css/styles.css
@@ -8,17 +8,24 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
+@import "components/icon-rows.css";
+@import "components/alt-screen-header.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
 @import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat.css";
 
 body {
   color: #2e363e;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   /* height: 1000vh; */
+
+  padding-top: 20px;
 }
 
 .main-screen {
