--- a/Front_End_Project/Chat_App_Front_End/css/screens/find.css
+++ b/Front_End_Project/Chat_App_Front_End/css/screens/find.css
@@ -105,3 +105,23 @@
 .open-post__likes span {
   margin-left: 5px;
 }
+
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(1.5);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+
+.open-post__likes:hover i {
+  will-change: transform;
+  animation: heartBeat 1s linear infinite;
+}
